# rsomics-bam-read-dist

./: Cargo.toml  README.md
benches/: bench.rs  read_dist.rs
src/: bed.rs  cigar.rs  cli.rs  driver.rs  index.rs  intervals.rs  lib.rs  tally.rs
tests/: compat.rs  make_golden.py  smoke.rs
tests/golden/: genes.bed12  large_genes.bed12  large_reads.bam  large_reads.bam.bai  reads.bam  reads.bam.bai
