[package]
name = "rsomics-bam-read-dist"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-read-dist"
authors = ["Zane Leong <efd@live.com>"]
description = "Classify mapped reads into genomic regions (CDS/UTR/intron/TSS/TES) from BAM + BED12 — Rust port of RSeQC read_distribution.py"

[[bin]]
name = "rsomics-bam-read-dist"
path = "src/main.rs"


[lib]
name = "rsomics_bam_read_dist"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coitrees = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "read_dist"
harness = false
